support: Add Color Blend Preference
Change-Id: Ia1d9575791e94f98ff66a89410e204d26cef2e40

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -23,4 +23,7 @@
     <dimen name="app_list_margin_start">72dp</dimen>
     <dimen name="app_list_margin_end">16dp</dimen>
 
+    <!-- Color Blend -->
+    <dimen name="color_blend_preview_size">36dp</dimen>
+
 </resources>
