--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -32,4 +32,25 @@
         <attr name="continuousUpdates" format="boolean" />
     </declare-styleable>
 
+    <!-- Value to pass to callback when restore button is pressed -->
+    <declare-styleable name="ColorPreference">
+        <attr name="defaultColorValue" format="integer" />
+    </declare-styleable>
+
+    <!-- Color Blend -->
+    <declare-styleable name="ColorBlendPreference">
+        <!-- Preference keys -->
+        <attr name="keyColorStart" format="string" />
+        <attr name="keyColorEnd" format="string" />
+        <attr name="keyBlendReverse" format="string" />
+        <!-- Default values -->
+        <attr name="defaultValueColorStart" format="color" />
+        <attr name="defaultValueColorEnd" format="color" />
+        <attr name="defaultValueBlendReverse" format="boolean" />
+        <!-- Preview strings -->
+        <attr name="previewStartText" format="string" />
+        <attr name="previewEndText" format="string" />
+        <attr name="previewBetweenText" format="string" />
+    </declare-styleable>
+
 </resources>
