--- a/res/values/banana_attrs.xml
+++ b/res/values/banana_attrs.xml
@@ -19,5 +19,6 @@
         <attr name="min" format="integer" />
         <attr name="units" format="string|reference" />
         <attr name="defaultText" format="string|reference" />
+        <attr name="allowEditText" format="boolean" />
     </declare-styleable>
 </resources>
