--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -15,4 +15,9 @@
 -->
 <resources>
 
+    <!-- Value to pass to callback when restore button is pressed -->
+    <declare-styleable name="ColorPickerPreference">
+        <attr name="alphaSlider" format="boolean" />
+    </declare-styleable>
+
 </resources>
