--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -33,4 +33,17 @@
         <attr name="ledPreview" format="boolean" />
         <attr name="alphaSlider" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="lineage_SelfRemovingPreference">
+        <attr name="requiresPackage" format="string" />
+        <attr name="requiresFeature" format="string" />
+        <attr name="requiresConfig" format="string" />
+        <attr name="requiresConfigMask" format="integer" />
+        <attr name="requiresProperty" format="string" />
+        <attr name="requiresOwner" format="boolean" />
+        <attr name="requiresAction" format="string" />
+        <attr name="replacesKey" format="string" />
+        <attr name="minSummaryLines" format="integer" />
+    </declare-styleable>
+
 </resources>
