support: OverlaySwitchPreference: Allow disabling an overlay in addition
Will always be toggled to the not state of the main overlay in key
Also improve the switch and allow setting an RRO of package:overlay format

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -60,4 +60,9 @@
         <attr name="civ_border_width" format="dimension"/>
         <attr name="civ_border_color" format="color"/>
     </declare-styleable>
+
+    <!-- Base attributes available to OverlaySwitchPreference. -->
+    <declare-styleable name="OverlaySwitchPreference">
+        <attr name="dkey" format="string" />
+    </declare-styleable>
 </resources>
