--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -53,4 +53,11 @@
         <attr name="units" format="string|reference" />
         <attr name="continuousUpdates" format="boolean" />
     </declare-styleable>
+
+    <!-- Base attributes available to CircularImageView -->
+    <declare-styleable name="CircularImageView">
+        <attr name="civ_border" format="boolean"/>
+        <attr name="civ_border_width" format="dimension"/>
+        <attr name="civ_border_color" format="color"/>
+    </declare-styleable>
 </resources>
